# ChangeLog for x11-themes/pekwm-themes-hewphoria
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/pekwm-themes-hewphoria/ChangeLog,v 1.4 2008/09/22 12:15:03 yngwin Exp $

*pekwm-themes-hewphoria-20080921 (22 Sep 2008)

  22 Sep 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml,
  +pekwm-themes-hewphoria-20080921.ebuild:
  Version bump. Fix metadata indentation.

  22 Aug 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml:
  Updated maintainer email

  08 Apr 2008; Ben de Groot <yngwin@gentoo.org> ChangeLog:
  Fix typo.

*pekwm-themes-hewphoria-20080404 (08 Apr 2008)

  08 Apr 2008; Ben de Groot <yngwin@gentoo.org> +metadata.xml,
  +pekwm-themes-hewphoria-20080404.ebuild:
  Initial commit. Ebuild contributed by Nico Wohlgemuth, maintainer by proxy.
