@@ -1,10 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/pekwm-themes-hewphoria/pekwm-themes-hewphoria-20080404.ebuild,v 1.1 2008/04/08 13:53:00 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/pekwm-themes-hewphoria/pekwm-themes-hewphoria-20080404.ebuild,v 1.2 2008/10/14 20:10:36 yngwin Exp $
 
 DESCRIPTION="A collection of PekWM themes from hewphoria"
 HOMEPAGE="http://hewphoria.com/"
-SRC_URI="http://nico.codernet.org/distfiles/${P}.tar.bz2"
+SRC_URI="http://devnull.core.ws/distfiles/${P}.tar.bz2"
 
 LICENSE="as-is"
 SLOT="0"
